@@ -11,6 +11,7 @@
 //#include <stdio.h>
 #include <QMouseEvent>
 #include <QAction>
+#include <stdio.h>
 //#include <QStandardItemModel>
 
 #include "popupmenu.h"
