@@ -2,6 +2,7 @@
         - Capitalizations in the menus thanks to Geoff King (gsking1->gmail. com)
         - Added some comments in app.cpp that I've been willing to include for a while. (Orcan)
         - Added a line to CMakeLists to install the splash image. Commented out for now. (Orcan)
+        - added new-user help dialog for Input button on midi track-info (rj)
 21.12.2010:
         - Moved all the config files "~/.musePrj, ~/.MusE, ~/.deicsonze.dco" into ~/.config/MusE/
           and renamed them as "projects, MusE.cfg, deicsonze.dco", respectively. (Orcan)
